12 cone : fixed wrong camera position

--- a/12-Dessin3D-cone/main.html
+++ b/12-Dessin3D-cone/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="libs/utils.js"></script>
 
     <!-- définition d'un objet à dessiner -->
-    <script type="text/javascript" src="Disque.js"></script>
+    <script type="text/javascript" src="Cone.js"></script>
 
     <!-- classes du projet -->
     <script type="text/javascript" src="Scene.js"></script>
@@ -64,7 +64,7 @@
     </p>
     <h2>Source files</h2>
     <ul>
-        <li><a href="Disque.js">Disque.js</a></li>
+        <li><a href="Cone.js">Cone.js</a></li>
         <li><a href="Scene.js">Scene.js</a></li>
     </ul>
 
